make compilable with Java 8 (v2)